tests/skip/invalid-specifier.stderr
error: encountered unknown or unsupported #[skip(..)] specifier `invalid_specifier`
 --> tests/skip/invalid-specifier.rs:5:12
  |
5 |     #[skip(invalid_specifier)]
  |            ^^^^^^^^^^^^^^^^^
